Bug UI - Start removing fragments.

--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -100,12 +100,10 @@
 
   <!-- Firefox Account strings -->
   <string name="fxaccount_label">&fxaccount.label;</string>
-  <string name="fxaccount_create_account_tab_label">&fxaccount.create.account.tab.label;</string>
-  <string name="fxaccount_sign_in_tab_label">&fxaccount.sign.in.tab.label;</string>
   <string name="fxaccount_description">&fxaccount.description;</string>
   <string name="fxaccount_policy">&fxaccount.policy;</string>
   <string name="fxaccount_forgot_password">&fxaccount.forgot.password;</string>
-  <string name="fxaccount_create_account_button_label">&fxaccount.create.account.button.label;</string>
+  <string name="fxaccount_sign_up_button_label">&fxaccount.sign.up.button.label;</string>
   <string name="fxaccount_sign_in_button_label">&fxaccount.sign.in.button.label;</string>
 
   <string name="fxaccount_email_hint">&fxaccount.email.hint;</string>
@@ -114,3 +112,6 @@
 
   <string name="fxaccount_bad_email">&fxaccount.bad.email;</string>
   <string name="fxaccount_bad_passwords">&fxaccount.bad.passwords;</string>
+
+  <string name="fxaccount_sign_in_instead">&fxaccount.sign.in.instead;</string>
+  <string name="fxaccount_sign_up_instead">&fxaccount.sign.up.instead;</string>
