--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -108,17 +108,12 @@
 <!ENTITY sync.text.tab.not.sent.label 'There was a problem sending your tab.'>
 
 <!-- Firefox Account strings -->
+<!ENTITY firefox.accounts 'Firefox Accounts'>
 <!ENTITY fxaccount.label '&fxaccountBrand.fullName.label;'>
-<!ENTITY fxaccount.create.account.tab.label 'CREATE ACCOUNT'>
-<!ENTITY fxaccount.sign.in.tab.label 'SIGN IN'>
-<!ENTITY fxaccount.description 'Short description of how awesome this
-         account is, or &lt;a href="http://mozilla.com"&gt;learn
-         more&lt;/a&gt;.'>
 <!ENTITY fxaccount.policy 'By proceeding you agree with the &lt;a
          href="http://mozilla.com"&gt;Terms of Service&lt;/a&gt; and &lt;a
          href="http://mozilla.com"&gt;Privacy Policy&lt;/a&gt;.'>
-<!ENTITY fxaccount.forgot.password '&lt;a
-         href="http://mozilla.com"&gt;Forgot password&lt;/a&gt;?'>
+<!ENTITY fxaccount.forgot.password 'Forgot password?'>
 <!ENTITY fxaccount.sign.up.button.label 'Create Account'>
 <!ENTITY fxaccount.sign.in.button.label 'Sign In'>
 <!ENTITY fxaccount.email.hint 'Email'>
@@ -126,9 +121,26 @@
 <!ENTITY fxaccount.password2.hint 'Confirm password'>
 <!ENTITY fxaccount.bad.email 'We need a real email address.'>
 <!ENTITY fxaccount.bad.passwords 'Your passwords must match.'>
-<!ENTITY fxaccount.sign.in.instead 'Already have an account? Sign in instead.'>
+<!ENTITY fxaccount.sign.in.instead 'Already have an account? Sign in!'>
 <!ENTITY fxaccount.sign.up.instead 'Don\&apos;t have an account? Sign up instead.'>
+
+<!ENTITY fxaccount.sign.in 'Sign in'>
+<!ENTITY fxaccount.create.account 'Create an account'>
+
+<!ENTITY fxaccount.old.firefox '&lt;a
+         href="http://mozilla.com"&gt;Using &syncBrand.shortName.label; with
+         an older version of &brandShortName;?&lt;/a&gt;.'>
+
+<!ENTITY fxaccount.when.were.you.born 'When were you born?'>
+<!ENTITY fxaccount.year.of.birth 'Year of birth'>
+
+<!ENTITY fxaccount.icon.contentDescription 'Firefox Accounts icon'>
+<!ENTITY fxaccount.password.show 'Show'>
+<!ENTITY fxaccount.get.started 'Get started'>
+<!ENTITY fxaccount.description 'Sign in to backup and sync all your settings and bookmarks!'>
+<!ENTITY fxaccount.sign.up 'Sign up'>
 
 <!-- Android > Accounts > [Firefox Account] Screen -->
 <!ENTITY fxaccount.options.title 'Options'>
 <!ENTITY fxaccount.options.configure.title 'Configure your Firefox Account'>
+<!ENTITY fxaccount.intro.contentDescription 'Firefox Accounts introduction graphics'>
