--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -129,7 +129,7 @@
 
 <!ENTITY fxaccount.old.firefox '&lt;a
          href="http://mozilla.com"&gt;Using &syncBrand.shortName.label; with
-         an older version of &brandShortName;?&lt;/a&gt;.'>
+         an older version of &brandShortName;?&lt;/a&gt;'>
 
 <!ENTITY fxaccount.when.were.you.born 'When were you born?'>
 <!ENTITY fxaccount.year.of.birth 'Year of birth'>
