--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -162,3 +162,15 @@
 <!ENTITY fxaccount.account.create.not.allowed 'Cannot create account'>
 <!ENTITY fxaccount.account.create.not.allowed.learn.more '&lt;a href="http://mozilla.com"&gt;Learn more&lt;/a&gt;'>
 <!ENTITY fxaccount.account.create.not.allowed.description 'You must meet certain age requirements to create a Firefox Account.'>
+<!ENTITY fxaccount.create.account.age.1960s '1960s or earlier'>
+<!ENTITY fxaccount.create.account.age.1970s '1970s'>
+<!ENTITY fxaccount.create.account.age.1980s '1980s'>
+<!ENTITY fxaccount.create.account.age.1990s '1990s'>
+<!ENTITY fxaccount.create.account.age.2000 '2000'>
+<!ENTITY fxaccount.create.account.age.2001 '2001'>
+<!ENTITY fxaccount.create.account.age.2002 '2002'>
+<!ENTITY fxaccount.create.account.age.2003 '2003'>
+<!ENTITY fxaccount.create.account.age.2004 '2004'>
+<!ENTITY fxaccount.create.account.age.2005 '2005'>
+<!ENTITY fxaccount.create.account.age.2006 '2006'>
+<!ENTITY fxaccount.create.account.age.2007 '2007'>
