Bug 951264 - Review comments.

--- a/strings/strings.xml.in
+++ b/strings/strings.xml.in
@@ -153,7 +153,6 @@
   <string name="fxaccount_update_credentials">&fxaccount.update.credentials;</string>
   <string name="fxaccount_update_credentials_button_label">&fxaccount.update.credentials.button.label;</string>
   <string name="fxaccount_account_create_not_allowed">&fxaccount.account.create.not.allowed;</string>
-  <string name="fxaccount_account_create_not_allowed_learn_more">&fxaccount.account.create.not.allowed.learn.more;</string>
   <string name="fxaccount_account_create_not_allowed_description">&fxaccount.account.create.not.allowed.description;</string>
   <string name="fxaccount_create_account_age_1960s">&fxaccount.create.account.age.1960s;</string>
   <string name="fxaccount_create_account_age_1970s">&fxaccount.create.account.age.1970s;</string>
@@ -167,3 +166,6 @@
   <string name="fxaccount_create_account_age_2005">&fxaccount.create.account.age.2005;</string>
   <string name="fxaccount_create_account_age_2006">&fxaccount.create.account.age.2006;</string>
   <string name="fxaccount_create_account_age_2007">&fxaccount.create.account.age.2007;</string>
+  <!-- We haven't yet decided how to linkify, so to save translation
+       time we're holding this back. -->
+  <string name="fxaccount_account_create_not_allowed_learn_more">&lt;a href="http://www.ftc.gov/news-events/media-resources/protecting-consumer-privacy/kids-privacy-coppa"&gt;Learn more&lt;/a&gt;</string>
