Bug 963442 - Review comments.

--- a/strings/strings.xml.template
+++ b/strings/strings.xml.template
@@ -5,6 +5,11 @@
 <!-- For standalone running. -->
 <!ENTITY brandShortName "Firefox">
 
+<!ENTITY formatS "&#037;s">
+<!ENTITY formatS1 "&#037;1&#036;s">
+<!ENTITY formatS2 "&#037;2&#036;s">
+<!ENTITY formatD "&#037;d">
+
 <!-- Sync strings. -->
 #include sync_strings.dtd.in
 
