--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -193,3 +193,12 @@ an account.  -->
 <!ENTITY fxaccount_getting_started_get_started 'Get started'>
 <!ENTITY fxaccount_getting_started_link_old_firefox 'https://support.mozilla.org/kb/use-sync-with-an-older-version-of-firefox'>
 <!ENTITY fxaccount_getting_started_old_firefox 'Using an older version of &syncBrand.shortName.label;?'>
+
+<!ENTITY fxaccount_create_account_sub_header 'Create an account'>
+<!ENTITY fxaccount_create_account_password_length_restriction 'Must be at least 8 characters'>
+<!ENTITY fxaccount_create_account_year_of_birth 'Year of birth'>
+<!-- Localization note: &formatS1; is fxaccount.policy.linktos, &formatS2; is fxaccount.policy.linkprivacy, both hyperlinked. -->
+<!ENTITY fxaccount_create_account_policy_text 'By proceeding, I agree to the &formatS1; and &formatS2; of Firefox online services.'>
+<!ENTITY fxaccount_create_account_button 'Next'>
+<!ENTITY fxaccount_create_account_choose_what_to_sync 'Choose what to sync'>
+<!ENTITY fxaccount_create_account_sign_in_instead 'Already have an account? Sign in'>
