--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -155,32 +155,6 @@
 <!ENTITY fxaccount.account.create.not.allowed 'Cannot create account'>
 <!ENTITY fxaccount.account.create.not.allowed.description 'You must meet certain age requirements to create a Firefox Account.'>
 
-<!-- Note to translators:
-
-These strings represent ranges of birth years, used to determine if a
-potential user is old enough to meet legal requirements. A user born
-in 1984 should understand that they should pick the translation of
-"1980s".
-
-Any years that are *not* old enough to create an account must be
-appear as individual numbers, so that they can be converted to a year
-and compared to the current year.  Year ranges (any entry that cannot
-be converted to a number) are *always* considered old enough to create
-an account.  -->
-
-<!ENTITY fxaccount.create.account.age.1960s '1960s or earlier'>
-<!ENTITY fxaccount.create.account.age.1970s '1970s'>
-<!ENTITY fxaccount.create.account.age.1980s '1980s'>
-<!ENTITY fxaccount.create.account.age.1990s '1990s'>
-<!ENTITY fxaccount.create.account.age.2000 '2000'>
-<!ENTITY fxaccount.create.account.age.2001 '2001'>
-<!ENTITY fxaccount.create.account.age.2002 '2002'>
-<!ENTITY fxaccount.create.account.age.2003 '2003'>
-<!ENTITY fxaccount.create.account.age.2004 '2004'>
-<!ENTITY fxaccount.create.account.age.2005 '2005'>
-<!ENTITY fxaccount.create.account.age.2006 '2006'>
-<!ENTITY fxaccount.create.account.age.2007 '2007'>
-
 <!ENTITY fxaccount_getting_started_welcome_to_sync 'Welcome to &syncBrand.shortName.label;'>
 <!ENTITY fxaccount_getting_started_description 'Sign in to sync your tabs, bookmarks, passwords &amp; more.'>
 <!ENTITY fxaccount_getting_started_get_started 'Get started'>
@@ -195,3 +169,4 @@ an account.  -->
 <!ENTITY fxaccount_create_account_button 'Next'>
 <!ENTITY fxaccount_create_account_choose_what_to_sync 'Choose what to sync'>
 <!ENTITY fxaccount_create_account_sign_in_instead 'Already have an account? Sign in'>
+<!ENTITY fxaccount_create_account_1950_or_earlier '1950 or earlier'>
