--- a/strings/sync_strings.dtd.in
+++ b/strings/sync_strings.dtd.in
@@ -152,8 +152,6 @@
 <!ENTITY fxaccount.status.tabs 'Open tabs'>
 <!ENTITY fxaccount.update.credentials 'Update password'>
 <!ENTITY fxaccount.update.credentials.button.label 'Re-connect'>
-<!ENTITY fxaccount.account.create.not.allowed 'Cannot create account'>
-<!ENTITY fxaccount.account.create.not.allowed.description 'You must meet certain age requirements to create a Firefox Account.'>
 
 <!ENTITY fxaccount_getting_started_welcome_to_sync 'Welcome to &syncBrand.shortName.label;'>
 <!ENTITY fxaccount_getting_started_description 'Sign in to sync your tabs, bookmarks, passwords &amp; more.'>
@@ -170,3 +168,8 @@
 <!ENTITY fxaccount_create_account_choose_what_to_sync 'Choose what to sync'>
 <!ENTITY fxaccount_create_account_sign_in_instead 'Already have an account? Sign in'>
 <!ENTITY fxaccount_create_account_1950_or_earlier '1950 or earlier'>
+
+<!ENTITY fxaccount_account_create_not_allowed 'Cannot create account'>
+<!ENTITY fxaccount_account_create_not_allowed_you_must_meet_certain_age_requirements 'You must meet certain age requirements to create an account.'>
+<!ENTITY fxaccount_link_create_not_allowed 'http://www.ftc.gov/news-events/media-resources/protecting-consumer-privacy/kids-privacy-coppa'>
+<!ENTITY fxaccount_account_create_not_allowed_learn_more 'Learn more'>
